--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,22 +1,31 @@
-<!-- <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
 </head>
 <body>
     <h1>Login</h1>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/login}" method="get">
         <div>
             <label for="email">Email:</label>
-            <input type="text" id="email" name="email" required>
+            <input type="text" id="email" name="email" required/>
         </div>
         <div>
             <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" required/>
         </div>
         <div>
             <button type="submit">Login</button>
         </div>
     </form>
+    <form th:action="@{/oauth2/authorization/google}" method="get">
+        <button type="submit">Login com Google</button>
+    </form>
+    <div th:if="${message}">
+        <p th:text="${message}"></p>
+    </div>
+    <div th:if="${error}">
+        <p th:text="${error}"></p>
+    </div>
 </body>
-</html> -->
+</html>
